--- a/osa_project/templates/partnership/department_detail.html
+++ b/osa_project/templates/partnership/department_detail.html
@@ -53,8 +53,8 @@
                         </div>
                         
                         <div class="info-item">
-                            <span class="info-label">Business name:</span>
-                            <span class="info-value">{{ department.business_name }}</span>
+                            <span class="info-label">Business email:</span>
+                            <span class="info-value">{{ department.business_email }}</span>
                         </div>
                         
                         <div class="info-item">
