--- a/osa_project/templates/partnership/department_edit.html
+++ b/osa_project/templates/partnership/department_edit.html
@@ -30,8 +30,8 @@
             {% csrf_token %}
             
             <div class="form-group">
-                <label>Business name:</label>
-                <input type="text" name="business_name" value="{{ department.business_name }}" required>
+                <label>Business email:</label>
+                <input type="email" name="business_email" value="{{ department.business_email }}" required>
             </div>
             
             <div class="form-group">
