--- a/osa_project/templates/partnership/dashboard.html
+++ b/osa_project/templates/partnership/dashboard.html
@@ -13,10 +13,11 @@
         <div class="nav-menu">
             <span>Welcome, {{ user.first_name|default:user.username }}</span>
             <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
-            {% if user.is_superuser or user.profile.user_type == 'owner' %}
-                <a href="{% url 'owner_panel' %}" class="btn-admin">Owner Panel</a>
-            {% elif user.profile.user_type == 'admin' %}
+            {% if user.is_superuser or user.profile.user_type == 'admin' %}
                 <a href="{% url 'admin_panel' %}" class="btn-admin">Admin Panel</a>
+            {% endif %}
+            {% if user.profile.user_type == 'owner' %}
+                <a href="{% url 'owner_panel' %}" class="btn-admin">Owner Panel</a>
             {% endif %}
         </div>
     </div>
@@ -46,7 +47,7 @@
                 <!-- Department Info -->
                 <div class="dept-info">
                     <h3>{{ dept.department_name }}</h3>
-                    <p class="business-name">{{ dept.business_name }}</p>
+                    <p class="business-name">{{ dept.business_email }}</p>
 
                     <!-- Actions -->
                     <div class="dept-actions">
