--- a/osa_project/templates/partnership/signup.html
+++ b/osa_project/templates/partnership/signup.html
@@ -33,8 +33,8 @@
 
                 <!-- Business name -->
                 <div class="flex flex-col md:flex-row items-center space-y-2 md:space-y-0 md:space-x-2">
-                    <label for="business_name" class="text-sm font-medium w-40 text-right">Business name:</label>
-                    <input type="text" id="business_name" name="business_name" required class="input-line p-1 flex-1 focus:border-red-700">
+                    <label for="business_email" class="text-sm font-medium w-40 text-right">Business email:</label>
+                    <input type="email" id="business_email" name="business_email" required class="input-line p-1 flex-1 focus:border-red-700">
                 </div>
 
                 <!-- Department name -->
